--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-
 <!doctype html>
 <html id="sadoodle">
 <head>
+    <script src="adSense.js"></script>
+    
   <meta name="website" content="ucbg.github.io" />
 
   <meta charset="UTF-8">
